<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.insert.InsertActivity"
    android:padding="16dp">

    <ProgressBar
        android:id="@+id/insert_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/insert_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/insert_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                app:srcCompat="@drawable/arrow_back"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/insert_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="40dp"
                android:fontFamily="@font/bebas_neue"
                android:text="@string/insert_title"
                android:textSize="35sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/insert_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_desc"
            android:layout_marginBottom="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="25sp"
            android:textAlignment="center" />

        <RadioGroup
            android:id="@+id/insert_job_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/insert_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/insert_machinelearning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_machinelearning" />

            <RadioButton
                android:id="@+id/insert_webdev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_webdev" />

            <RadioButton
                android:id="@+id/insert_mobiledev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_mobiledev" />

            <RadioButton
                android:id="@+id/insert_cloud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insert_cloud" />
        </RadioGroup>

        <Button
            android:id="@+id/insert_button"
            android:layout_width="270sp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_primary"
            android:text="@string/insert_button"
            android:fontFamily="@font/bebas_neue"
            android:textSize="27sp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/insert_job_radiogroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
