<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.result.ResultActivity">

    <ProgressBar
        android:id="@+id/result_loading_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/result_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_title"
            android:textSize="35sp"
            android:fontFamily="@font/bebas_neue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/result_line"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/primary"
            android:paddingTop="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/result_title"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/result_cv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_cv"
            android:fontFamily="@font/microsoft_sans_serif"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_line"
            android:paddingTop="20dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/result_cv_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_cv_result">

            <ProgressBar
                android:id="@+id/result_progressbar_background"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="100"
                android:progressDrawable="@drawable/result_full"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ProgressBar
                android:id="@+id/result_progressbar_status"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="75"
                android:progressDrawable="@drawable/result_progress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/result_progressbar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_progressbar_text"
                android:textSize="30sp"
                android:fontFamily="@font/bebas_neue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/result_cv_improve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_cv_improve"
            android:fontFamily="@font/microsoft_sans_serif"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/result_cv_progress_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/result_cv_improve_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:fontFamily="@font/microsoft_sans_serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_cv_improve" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/result_test_more_button"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_primary"
                android:fontFamily="@font/bebas_neue"
                android:text="@string/result_test_more"
                android:textSize="20sp" />

            <Button
                android:id="@+id/result_back_to_menu_button"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_primary"
                android:fontFamily="@font/bebas_neue"
                android:text="@string/result_back_to_menu"
                android:textSize="20sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/result_share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                app:srcCompat="@drawable/baseline_share_24"
                android:layout_gravity="center"
                app:tint="@color/white" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
