<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.profile.ProfileActivity"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/profile_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary"
                app:srcCompat="@drawable/arrow_back"
                app:tint="@color/white"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/profile_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="75dp"
                android:fontFamily="@font/bebas_neue"
                android:text="@string/profile_title"
                android:textSize="35sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/common_background"
            android:layout_marginTop="170dp"
            android:layout_marginBottom="70dp">

            <TextView
                android:id="@+id/profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="180dp"
                android:text="@string/user_username"
                android:textColor="@color/white"
                android:fontFamily="@font/microsoft_sans_serif"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_username_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_username">

                <TextView
                    android:id="@+id/profile_username_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:fontFamily="@font/microsoft_sans_serif" />

                <View
                    android:id="@+id/profile_username_underline"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/user_email"
                android:textColor="@color/white"
                android:fontFamily="@font/microsoft_sans_serif"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_username_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_email">

                <TextView
                    android:id="@+id/profile_email_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:fontFamily="@font/microsoft_sans_serif" />

                <View
                    android:id="@+id/profile_email_underline"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/white" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_data">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/profile_edit"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_primary"
                android:backgroundTint="@color/primary"
                android:text="@string/profile_edit"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/bebas_neue"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/profile_logout"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_primary"
                android:backgroundTint="@color/red"
                android:text="@string/profile_logout"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:fontFamily="@font/bebas_neue" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="110dp"
        tools:src="@tools:sample/avatars" />

    <ProgressBar
        android:id="@+id/profile_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</FrameLayout>